# naver-smartstore-faq-chatbot

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
scripts/: preprocessing.py  prestart.py
src/: main.py
src/api/v1/: deps.py  router.py
src/api/v1/endpoints/: chat.py
src/core/: config.py  constants.py  decorators.py  enums.py  logging.py  prompts.py
src/domain/: chat.py  knowledge.py  validation.py
src/infrastructure/chroma/: client.py
src/infrastructure/openai/: client.py
src/infrastructure/redis/: client.py
src/interfaces/repositories/: knowledge.py  memory.py
src/interfaces/services/: chat.py  llm.py  validator.py
src/repositories/: knowledge.py  memory.py
src/schemes/: response.py
src/services/: chat.py  llm.py  validator.py
src/utils/: format.py  streaming.py
static/js/: chat.js
templates/: base.html  index.html
