[tool.poetry]
name = "naver-faq-chatbot"
version = "0.1.0"
description = ""
authors = ["PrimadonnaGit <jwhyun2215@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
openai = "^1.63.0"
chromadb = "^0.6.3"
pydantic-settings = "^2.7.1"
jinja2 = "^3.1.5"
redis = "^5.2.1"
loguru = "^0.7.3"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
tiktoken = "^0.9.0"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
